opengl/eglbackend: consider makeCurrent failing the same as graphics reset

Even if it's not actually caused by a graphics reset, we can neither know for
certain what's causing the issue, nor can we render without re-creating the
context.

BUG: 514828